# i3-ipcpp

./: .clang  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile.in  README.md  configure
cmake/: i3-ipc++-config.cmake.in
docs/overview/: overview.odg
docs/simulator/: README.md  colors.sty  example.tex  function.sty  function_list.sty  package.sty  package_list.sty  package_queue.sty  settings.sty  simulator.cls  simulator.sty  utility.sty
examples/: CMakeLists.txt  get_bar_config.cpp  get_binding_modes.cpp  get_config.cpp  get_marks.cpp  get_outputs.cpp  get_tree.cpp  get_version.cpp  get_workspaces.cpp  multiple_events.cpp  restart_event.cpp  send_command.cpp  tick_event.cpp  window_event.cpp
include/: i3_containers.hpp  i3_ipc.hpp  i3_ipc_bad_message.hpp  i3_ipc_exception.hpp  i3_ipc_invalid_argument.hpp  i3_ipc_unsupported.hpp
src/: i3_message.cpp  i3_message.hpp
src/exceptions/: i3_ipc_bad_message.cpp  i3_ipc_exception.cpp  i3_ipc_invalid_argument.cpp  i3_ipc_unsupported.cpp
src/i3_ipc/: i3_ipc-events.cpp  i3_ipc-general.cpp  i3_ipc-requests.cpp
src/i3_json_parser/: i3_json_parser-events.cpp  i3_json_parser-requests.cpp  i3_json_parser-utility.cpp  i3_json_parser-utility.inl  i3_json_parser.hpp
